# CPP_BigInt

./: .gitignore  BigInt.cpp  BigInt.hpp  CMakeLists.txt  README.md  main.cpp
tests/: CMakeLists.txt  bigint_test.cpp
